# Whirled

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Main.theme  Main.tscn  Whirled.csproj  Whirled.csproj.old  Whirled.sln  default_env.tres  export_presets.cfg  icon.png.import  profile.py  project.godot  rustfmt.toml  theme.tres
.github/workflows/: godot.yml
Gizmo/: Arrow.tscn  Gizmo.tscn  GizmoMat.tres  Plane.tscn  Ring.tscn  arrow.blend  arrow.blend1  arrow.obj.import  ring.blend  ring.blend1  ring.obj.import
Properties/: AssemblyInfo.cs
Scripts/: GameDataManager.cs  Gizmo.cs  ObjectProperty.cs  PriorityMouse.cs  PropertyContainer.cs  SelectManager.cs  ViewCamera.cs  WRLEntryList.cs  WRLManager.cs
Scripts/Controls/: Array.cs  Number.cs  String.cs  TransformControl.cs  Vector.cs
Scripts/Gizmo/: Arrow.cs  Gizmo.cs  GizmoBase.cs  Plane.cs  Ring.cs
Scripts/LR2/: FileExtensions.cs  MDL2.cs  MIP.cs  TDF.cs  TDF.gdshader
compile_shaders/: Cargo.toml
compile_shaders/src/: lib.rs
formats/: tdf_surface_props.txt
godot/: build.sh
modules/lr2/: SCsub  init.cpp  init.h  register_types.cpp  register_types.h
pck/: project.godot  whirled.tscn
scripts/: GameDataManager.cs  PropertyContainer.cs  ViewCamera.cs  WRLEntryList.cs
scripts/LR2/: FileExtensions.cs  MDL2.cs  MIP.cs  TDF.cs
shaders/: Cargo.toml  build.rs
shaders/src/: test.frag  test.vert  test2.vert  test3.vert
src/: assets.rs  file.rs  main.rs  models.rs  render.rs  ui.rs  wrl.rs
src/lr2/: md2.rs  mod.rs  models.rs
src/ui/: mod.rs
src/whirled/: camera.rs  container.rs  gfx.rs  main.rs  mod.rs  (+2 more)
(+85 files in other folders)
