cargo-features = ["profile-rustflags"]

[package]
name = "whirled"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_egui = "0.23"
futures-core = "0.3.29"
futures-io = "0.3.29"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
	"bevy_asset",
	"bevy_scene",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_pbr",
	"bevy_render",
	"bevy_sprite",
	"x11",
	"wayland",
]

[profile.dev]
rustflags = ["-Clink-arg=-fuse-ld=mold", "-Zshare-generics=y"]

[profile.dev.package."*"]
opt-level = 3
